--- a/README
+++ b/README
@@ -7,3 +7,7 @@ REF: https://github.com/kserve/kserve/tree/master/python/kserve/docs
 REF: https://github.com/kubeflow/kfp-tekton/tree/master/samples
 REF: https://github.com/pytorch/serve/blob/v0.8.2/examples/large_models/Huggingface_accelerate/custom_handler.py
 REF: https://hubgw.docker.com/r/pytorch/torchserve-kfs/tags
+
+~~~
+podman run --network host -e PROTOCOL_VERSION="v2" --rm -it -v $(pwd)/vol:/mnt/models --entrypoint torchserve pytorch/torchserve-kfs:0.8.2 --start --foreground --model-store=/mnt/models/model-store --ts-config=/mnt/models/config/config.properties --no-config-snapshots --models bloomz=bloomz.mar
+~~~
